// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBar renders correctly 1`] = `
<DocumentFragment>
  <aside
    class="menu sidebar"
  >
    <div
      class="box"
    >
      <p
        class="menu-label"
      >
        Related posts
      </p>
      <ul
        class="menu-list"
      >
        <li>
          <a
            class="horizontal-post-tile"
            href="/blog/baking-tutorial/"
          >
            <div
              class="card"
            >
              <div
                class="card-image"
              >
                <figure>
                  <img
                    alt="blog image"
                    image="[object Object]"
                  />
                </figure>
              </div>
              <div
                class="card-content"
              >
                <div
                  class="content"
                >
                  <h6>
                    Baking Tutorial
                  </h6>
                  <p>
                    Lemon drops pastry danish halvah. Chupa chups fruitcake powder...
                  </p>
                </div>
              </div>
            </div>
          </a>
        </li>
        <li>
          <a
            class="horizontal-post-tile"
            href="/blog/ten-best-things/"
          >
            <div
              class="card"
            >
              <div
                class="card-image"
              >
                <figure>
                  <img
                    alt="blog image"
                    image="[object Object]"
                  />
                </figure>
              </div>
              <div
                class="card-content"
              >
                <div
                  class="content"
                >
                  <h6>
                    10 Best Things
                  </h6>
                  <p>
                    Cheesecake lemon drops Cheesecake lemon drops pastry danish halvah...
                  </p>
                </div>
              </div>
            </div>
          </a>
        </li>
        <li>
          <a
            class="horizontal-post-tile"
            href="/blog/guide/"
          >
            <div
              class="card"
            >
              <div
                class="card-image"
              >
                <figure>
                  <img
                    alt="blog image"
                    image="[object Object]"
                  />
                </figure>
              </div>
              <div
                class="card-content"
              >
                <div
                  class="content"
                >
                  <h6>
                    Guide
                  </h6>
                  <p>
                    Chupa chups fruitcake powder dessert gingerbread gummies...
                  </p>
                </div>
              </div>
            </div>
          </a>
        </li>
      </ul>
    </div>
    <div
      class="box"
    >
      <p
        class="menu-label"
      >
        Featured posts
      </p>
      <ul
        class="menu-list"
      >
        <li>
          <a
            class="horizontal-post-tile"
            href="/blog/baking-tutorial/"
          >
            <div
              class="card"
            >
              <div
                class="card-image"
              >
                <figure>
                  <img
                    alt="blog image"
                    image="[object Object]"
                  />
                </figure>
              </div>
              <div
                class="card-content"
              >
                <div
                  class="content"
                >
                  <h6>
                    Baking Tutorial
                  </h6>
                  <p>
                    Lemon drops pastry danish halvah. Chupa chups fruitcake powder...
                  </p>
                </div>
              </div>
            </div>
          </a>
        </li>
        <li>
          <a
            class="horizontal-post-tile"
            href="/blog/ten-best-things/"
          >
            <div
              class="card"
            >
              <div
                class="card-image"
              >
                <figure>
                  <img
                    alt="blog image"
                    image="[object Object]"
                  />
                </figure>
              </div>
              <div
                class="card-content"
              >
                <div
                  class="content"
                >
                  <h6>
                    10 Best Things
                  </h6>
                  <p>
                    Cheesecake lemon drops Cheesecake lemon drops pastry danish halvah...
                  </p>
                </div>
              </div>
            </div>
          </a>
        </li>
        <li>
          <a
            class="horizontal-post-tile"
            href="/blog/guide/"
          >
            <div
              class="card"
            >
              <div
                class="card-image"
              >
                <figure>
                  <img
                    alt="blog image"
                    image="[object Object]"
                  />
                </figure>
              </div>
              <div
                class="card-content"
              >
                <div
                  class="content"
                >
                  <h6>
                    Guide
                  </h6>
                  <p>
                    Chupa chups fruitcake powder dessert gingerbread gummies...
                  </p>
                </div>
              </div>
            </div>
          </a>
        </li>
      </ul>
    </div>
  </aside>
</DocumentFragment>
`;

exports[`SideBar renders correctly without related posts 1`] = `
<DocumentFragment>
  <aside
    class="menu sidebar"
  >
    <div
      class="box"
    >
      <p
        class="menu-label"
      >
        Featured posts
      </p>
      <ul
        class="menu-list"
      >
        <li>
          <a
            class="horizontal-post-tile"
            href="/blog/baking-tutorial/"
          >
            <div
              class="card"
            >
              <div
                class="card-image"
              >
                <figure>
                  <img
                    alt="blog image"
                    image="[object Object]"
                  />
                </figure>
              </div>
              <div
                class="card-content"
              >
                <div
                  class="content"
                >
                  <h6>
                    Baking Tutorial
                  </h6>
                  <p>
                    Lemon drops pastry danish halvah. Chupa chups fruitcake powder...
                  </p>
                </div>
              </div>
            </div>
          </a>
        </li>
        <li>
          <a
            class="horizontal-post-tile"
            href="/blog/ten-best-things/"
          >
            <div
              class="card"
            >
              <div
                class="card-image"
              >
                <figure>
                  <img
                    alt="blog image"
                    image="[object Object]"
                  />
                </figure>
              </div>
              <div
                class="card-content"
              >
                <div
                  class="content"
                >
                  <h6>
                    10 Best Things
                  </h6>
                  <p>
                    Cheesecake lemon drops Cheesecake lemon drops pastry danish halvah...
                  </p>
                </div>
              </div>
            </div>
          </a>
        </li>
        <li>
          <a
            class="horizontal-post-tile"
            href="/blog/guide/"
          >
            <div
              class="card"
            >
              <div
                class="card-image"
              >
                <figure>
                  <img
                    alt="blog image"
                    image="[object Object]"
                  />
                </figure>
              </div>
              <div
                class="card-content"
              >
                <div
                  class="content"
                >
                  <h6>
                    Guide
                  </h6>
                  <p>
                    Chupa chups fruitcake powder dessert gingerbread gummies...
                  </p>
                </div>
              </div>
            </div>
          </a>
        </li>
      </ul>
    </div>
  </aside>
</DocumentFragment>
`;
